feat(sidechain): adds gnosis booster helper (#242)
* feat(sidechain): adds gnosis booster helper

* docs: adds gnosis booster helper TODOs

* refactor(boosterhelper): moves crv from constructor to earmarkRewards fn

--- a/.github/workflows/lint-ts.yaml
+++ b/.github/workflows/lint-ts.yaml
@@ -14,5 +14,5 @@ jobs:
                   cache: "yarn"
 
             - run: yarn
-            - run: yarn compile
+            - run: yarn typechain
             - run: yarn lint:ts
